Summary of changes:   1. Created SpectralComponentSelectionPanel.java - UI panel with:     - Spectral class letters checkboxes (O, B, A, F, G, K, M, L, T, Y)     - Subtype checkboxes (0-9) grouped as "Early (Hot)" and "Late (Cool)"     - Luminosity class checkboxes (I through VII with descriptions)     - "Select All" convenience checkboxes for each category     - Preview label showing current selection   2. Modified AstroSearchQuery.java - Added fields:     - spectralComponentFilterEnabled, spectralClassLetters, spectralSubtypes, luminosityClasses     - Methods: clearSpectralComponentFilter(), setSpectralComponentFilter(), hasSpectralComponentFilter()   3. Modified StarObjectRepositoryImpl.java - Added query predicates for:     - Class letter filtering using LIKE 'F%' patterns     - Subtype filtering using LIKE '_0%' and LIKE '__0%' patterns     - Luminosity class filtering using LIKE '%V' patterns (sorted by length to prevent partial matches)   4. Modified SearchPane.java and SearchPane.fxml - Integrated the spectral component panel into the query dialog   Users can now perform Chuck's special query by:   - Enabling the "Enable Component Filter" checkbox   - Selecting "F" in the spectral class section   - Selecting subtypes 0-5   - Selecting luminosity classes V and VI

--- a/tripsapplication/src/main/resources/com/teamgannon/trips/search/SearchPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/search/SearchPane.fxml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 
 <fx:root type="VBox" xmlns:fx="http://javafx.com/fxml/1" spacing="10" styleClass="search-pane" stylesheets="@SearchPane.css">
     <children>
-        <GridPane fx:id="queryBox" hgap="5" vgap="5" styleClass="search-grid">
-            <padding>
-                <Insets top="10" right="10" bottom="10" left="10" />
-            </padding>
-            <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="320" />
-                <ColumnConstraints hgrow="ALWAYS" minWidth="320" />
-            </columnConstraints>
-            <children>
-                <VBox fx:id="datasetBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="2" />
-                <VBox fx:id="distanceBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" />
+        <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
+            <content>
+                <GridPane fx:id="queryBox" hgap="5" vgap="5" styleClass="search-grid">
+                    <padding>
+                        <Insets top="10" right="10" bottom="10" left="10" />
+                    </padding>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="320" />
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="320" />
+                    </columnConstraints>
+                    <children>
+                        <VBox fx:id="datasetBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="2" />
+                        <VBox fx:id="distanceBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" />
 
-                <VBox fx:id="stellarClassBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <VBox fx:id="techBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <VBox fx:id="stellarClassBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <VBox fx:id="techBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <VBox fx:id="categoryBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <VBox fx:id="productsBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <VBox fx:id="categoryBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <VBox fx:id="productsBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <VBox fx:id="fuelBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                <VBox fx:id="milSpaceBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <VBox fx:id="fuelBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                        <VBox fx:id="milSpaceBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-                <VBox fx:id="worldBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                <VBox fx:id="milPlanetBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <VBox fx:id="worldBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                        <VBox fx:id="milPlanetBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-                <VBox fx:id="portBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-                <VBox fx:id="miscBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <VBox fx:id="portBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                        <VBox fx:id="miscBox" styleClass="search-cell" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
-                <VBox fx:id="populationBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-                <VBox fx:id="polityBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="9" />
-            </children>
-        </GridPane>
+                        <VBox fx:id="populationBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                        <VBox fx:id="polityBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+                        <VBox fx:id="spectralComponentBox" styleClass="search-cell" GridPane.columnIndex="0" GridPane.rowIndex="10" GridPane.columnSpan="2" />
+                    </children>
+                </GridPane>
+            </content>
+        </ScrollPane>
     </children>
 </fx:root>
