add support for diagnostic log transfer.

--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/menuBar/HelpMenu.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/menuBar/HelpMenu.fxml
@@ -16,4 +16,8 @@
     <MenuItem mnemonicParsing="false"
               onAction="#getInventory"
               text="Get Computer Description"/>
+    <SeparatorMenuItem/>
+    <MenuItem mnemonicParsing="false"
+              onAction="#reportProblem"
+              text="Report a Problem..."/>
 </Menu>
