--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/menuBar/ToolsMenu.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/menuBar/ToolsMenu.fxml
@@ -8,13 +8,13 @@
           text="Route">
         <MenuItem mnemonicParsing="false"
                   onAction="#routeFinderInView"
-                  text="Route finder using currently selected starPositionDescriptors"/>
+                  text="Route finder using currently selected stars"/>
         <MenuItem mnemonicParsing="false"
                   onAction="#routeFinderDataset"
                   text="Route finder using entire dataset"/>
         <MenuItem mnemonicParsing="false"
                   onAction="#clickRoutes"
-                  text="Create route by clicking on starPositionDescriptors"/>
+                  text="Create route by clicking on stars"/>
         <MenuItem mnemonicParsing="false"
                   onAction="#editDeleteRoutes"
                   text="Edit or delete Route information"/>
@@ -26,19 +26,19 @@
           text="Links">
         <MenuItem mnemonicParsing="false"
                   onAction="#transitFinder"
-                  text="Find links between starPositionDescriptors by distance"/>
+                  text="Find links between stars by distance"/>
         <MenuItem mnemonicParsing="false"
                   onAction="#clearTransits"
                   text="Clear existing links"/>
     </Menu>
     <Menu mnemonicParsing="false"
-          text="Search for / Select starPositionDescriptors">
+          text="Search for / Select stars">
         <MenuItem mnemonicParsing="false"
                   onAction="#runQuery"
-                  text="Select starPositionDescriptors to display from current dataset"/>
+                  text="Select stars to display from current dataset"/>
         <MenuItem mnemonicParsing="false"
                   onAction="#advancedSearch"
-                  text="Select starPositionDescriptors using advanced search.."/>
+                  text="Select stars using advanced search.."/>
     </Menu>
     <SeparatorMenuItem/>
     <MenuItem mnemonicParsing="false"
